[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "openshift-python-utilities"
version = "0.0.0"
description = "A utilities repository for https://github.com/RedHatQE/openshift-python-wrapper"
authors = ["Meni Yakove <myakove@gmail.com>", "Ruth Netser <rnetser@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "ocp_utilities"}]
homepage = "https://github.com/RedHatQE/openshift-python-utilities"
documentation = "https://github.com/RedHatQE/openshift-python-utilities/blob/main/README.md"
keywords = ["Openshift", "ocp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry.urls]
Download = "https://pypi.org/project/openshift-python-utilities/"
"Bug Tracker" = "https://github.com/RedHatQE/openshift-python-utilities/issues"

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^6.7.0"
pytest = "^7.4.0"
pytest-testconfig = "^0.2.0"
pyyaml = "^6.0.1"
openshift-python-wrapper-data-collector = "^1.0.4"
python-simple-logger = "^1.0.5"
timeout-sampler = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "*"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
