[metadata]
name = openshift-python-utilities
version = 4.12.9
author = Meni Yakove, Ruth Netser
author_email = rnetser@redhat.com
description = Wrapper around https://github.com/openshift/openshift-python-utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-python-utilities
download_url = https://github.com/RedHatQE/openshift-python-utilities/archive/refs/tags/v4.12.9.tar.gz

project_urls =
    Bug Tracker = https://github.com/RedHatQE/openshift-python-utilities/issues
    Documentation = https://openshift-python-utilities.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
